Se agrega Pestaña de Servicios

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                         <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="./pages/servicios.html">Servícios</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " href="./pages/tiendas.html">Tiendas</a>
                     </li>
                     <li class="nav-item">
@@ -138,6 +141,9 @@
                         </div>
                         <div>
                             <a href="./pages/nosotros.html" class="links">Nosotros</a>
+                        </div>
+                        <div>
+                            <a href="./pages/servicios.html" class="links">Servícios</a>
                         </div>
                         <div>
                             <a href="./pages/tiendas.html" class="links">Tiendas</a>
