--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,6 +54,9 @@
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="./servicios.html">Servícios</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " href="./tiendas.html">Tiendas</a>
                     </li>
                     <li class="nav-item">
@@ -209,6 +212,9 @@
                         </div>
                         <div>
                             <a href="nosotros.html" class="links">Nosotros</a>
+                        </div>
+                        <div>
+                            <a href="./servicios.html" class="links">Servícios</a>
                         </div>
                         <div>
                             <a href="./tiendas.html" class="links">Tiendas</a>
