--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -183,7 +183,7 @@
         
         <h1>¡Consulta nuestros servícios!</h1>
         <button type="button" name="button" class="clicks">
-            <a href="./pages/contacto.html" class="clicks">Sabes más</a>
+            <a href="./contacto.html" class="clicks">Sabes más</a>
         </button><br><br>
         
         <section class="animate__animated animate__slideInLeft nosotros-info">
