--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -182,7 +182,7 @@
     <div class="logotipo">
         
         <h1>¡Consulta nuestros servícios!</h1>
-        <button type="button" name="button" class="clicks">
+        <button type="button" name="button" class="clicks2">
             <a href="./contacto.html" class="clicks">Sabes más</a>
         </button><br><br>
         
